# macsim

./: .clang-format  .gitignore  .gitmodules  .travis.yml  BUILD_ON_PACE.md  INSTALL  Makefile.am  README  README.md  RELEASE  SConscript  SConstruct  build.py  build.rover.py  configure.m4  dramsim2.sh  libmacsimComponent.cc  macsim.config  macsim.sample.sdl  macsimComponent.cpp  macsimComponent.h  macsimEvent.h  run_cmd.py
.github/workflows/: build.yml
def/: alloc.stat.def  bp.param.def  bp.stat.def  configure.in  core.param.def  core.stat.def  core_stat_files.def  core_trace.stat.def  debug.param.def  dram.stat.def  dyfr.param.def  dyfr.stat.def  frontend.param.def  general.param.def  general.stat.def  hmc.param.def  hmc.stat.def  inst.stat.def  inst.v1.0.stat.def  inst.v1.1.stat.def  internal.stat.def  memory.param.def  memory.stat.def  network.param.def  network.stat.def  power_units.def  power_units.stat.def  pref.param.def  pref.stat.def  ramulator.param.def  retire_iterface.def  schedule.param.def  stat_files.def  stream.stat.def  trace.stat.def  uopdelay.def  uopdispatchlatency_ptx580.def  uoplatency_igpu.def  uoplatency_nvbit580.def  uoplatency_ptx.def  (+8 more)
def/wattch/: hotleak.param.def  power.param.def  power_events.def  wattch.param.def
doc/latex/: Makefile  ack.tex  append.tex  basic.tex  cmd.bat  code.tex  code_top.tex  debug.tex  faq.tex  gpu.tex  hetero.tex  internal.tex  intro.tex  knob.tex  luximono.sty  main.tex  memory.tex  modify.tex  parameter.tex  pipeline.tex  process.tex  ref.bib  run.tex  scripts.tex  sst.tex  stat.tex  tool.tex  trace.tex  troubleshooting.tex
docker/: Dockerfile  README  install-pin.sh  install-sst.sh
params/: params_8800gt  params_gtx280  params_gtx465  params_gtx580  params_hetero_4c_4g  params_hetero_4c_6g  params_intel  params_lrb  params_x86
patch/: dramsim2_make.patch  dramsim2_src.patch
scripts/: Makefile  SConscript  knobgen.pl  statgen.pl
src/: Doxyfile  allocate.cc  allocate.h  allocate_smc.cc  allocate_smc.h  assert_macros.h  bp.cc  bp.h  bp_gshare.cc  bp_gshare.h  bp_targ.cc  bp_targ.h  bug_detector.cc  bug_detector.h  build.py  cache.cc  cache.h  callback.h  config.h  core.cc  core.h  cs_disas.cc  cs_disas.h  cscope.sh  debug_macros.h  dram.cc  dram.h  dram_ctrl.cc  dram_ctrl.h  dram_dramsim.cc  dram_dramsim.h  dram_dramsim3.cc  dram_dramsim3.h  dram_ramulator.cc  dram_ramulator.h  dram_sst_vaultsim.cc  dram_sst_vaultsim.h  dyfr.cc  dyfr.h  exec.cc  (+109 more)
src/hw_prefetcher/: pref_2dc.cc  pref_2dc.h  pref_ghb.cc  pref_ghb.h  pref_phase.cc  pref_phase.h  pref_stream.cc  pref_stream.h  pref_stridepc.cc  pref_stridepc.h
src/manifold/: manifold_includes.h
src/manifold/models/iris/iris_srcs/: Makefile.am  configure.ac
src/manifold/models/iris/iris_srcs/components/: genericBuffer.cc  genericBuffer.h  genericRC.cc  genericRC.h  genericSwitchArbiter.cc  genericSwitchArbiter.h  genericVcAllocator.cc  genericVcAllocator.h  genericVcAllocator_cc.bak  genericVcAllocator_h.bak  manifoldProcessor.cc  manifoldProcessor.h  ninterface.cc  ninterface.h  pktgen.cc  pktgen.h  simpleMC.cc  simpleMC.h  simpleRouter.cc  simpleRouter.h
src/manifold/models/iris/iris_srcs/data_types/: flit.cc  flit.h  linkData.cc  linkData.h  networkPacket.cc  networkPacket.h
src/manifold/models/iris/iris_srcs/topology/: mesh.cc  mesh.h  ring.cc  ring.h  spinalMesh.cc  spinalMesh.h  torus.cc  torus.h  twoNode.cc  twoNode.h  util.cc
src/orion/: Makefile  SIM_ALU.c  SIM_ALU.h  SIM_ALU_model.h  SIM_arbiter.c  SIM_arbiter.h  SIM_array.h  SIM_array_internal.h  SIM_array_l.c  SIM_array_m.c  SIM_array_model.h  SIM_cam.h  SIM_clock.c  SIM_clock.h  SIM_crossbar.c  SIM_crossbar.h  SIM_link.h  SIM_link_model.h  SIM_misc.c  SIM_misc.h  SIM_misc_model.h  SIM_parameter.h  SIM_permu.c  SIM_permu.h  SIM_port.h  SIM_port_raw.h  SIM_reg.c  SIM_reg.h  SIM_router.c  SIM_time.c  SIM_util.c  dump_para.c  orion_link.c  orion_router_area.c  orion_router_power.c  test_alu.c  test_permu.c
sst-unit-test/: README  common.py  macsimComponent-test-000.py  macsimComponent-test-001.py  macsimComponent-test-001_port.py  macsimComponent-test-001_subcomp.py  macsimComponent-test-002.py  macsimComponent-test-002_i.py  macsimComponent-test-002_port.py  macsimComponent-test-002_subcomp.py  params.in  runTests.py  sdl-00-instantiation.py  sdl-01a-cpu-split-hier-port.py  sdl-01b-cpu-split-hier-subcomp.py  sdl-02a-gpu-split-hier-port.py  sdl-02b-gpu-split-hier-subcomp.py  sdl-03a-cpu-L1-mem.py  sdl-03b-gpu-L1-mem.py  sdl-03c-gpu-L1-mem-L2.py  sdl-04a-gpu-2-core-L1-mem.py  sdl-04b-gpu-16-core-L1-mem.py  sdl-04c-gpu-16-core-L1-L2-mem.py  sdl-05a-2-gpu-2-core-L1-mem.py  sdl-05b-2-gpu-2-core-L1-mem-L2.py  sdl1.py  sdl1.xml  sdl2.py  sdl2.xml  sdl3.py  sdl4.py  test_sstmacsim.py  trace_file_list  trace_file_list_cpu  trace_file_list_gpu
sst-unit-test/a64_tests/: params.in  sdl3.py  trace_file_list
sst-unit-test/topology/: mesh.py  params.py  ring.py  torus.py  xbar.py
tools/: DDR4_ramulator_2133P_8Gb_x8.ini  bench_common_igpu.py  download_trace_files.py  gpu_tracegen.py  ocelot_install_guide.txt  system.ini.igpu  trace_common_igpu.py
tools/mem_trace_generator/: Makefile  README.md  cmd1  cmd2  coh_trace.1.txt  hmcsim_trace_conv.py  mem_trace.cc  mem_trace.h  mem_trace_generator.cc
tools/ocelot_docker/: Dockerfile
tools/ocelot_installation_guide/: README.md
tools/qsim_a64_tracegen/: Makefile  cs_disas.cpp  cs_disas.h  macsim_tracegen.cpp  macsim_tracegen.h  rename_macsim_trace.sh
tools/qsim_x86_tracegen/: LICENSE  Makefile  README.md
tools/trace_converter/: README.md  SConscript  all_knobs.cc  all_knobs.h  main.cc  params.in  trace_converter.cc  trace_converter.h  trace_read_conv.h
tools/trace_reader/: README.md  SConscript  SConstruct  knob.def  knobgen.pl  main.cc  trace_reader.cc  trace_reader.h
tools/x86_trace_generator/: Makefile  README  XED  annotations.h  literal_gen.py  makefile.gnu.config  makefile.rules  memtest.cp  memtest.cpp  mergesort_sample.c  pin3.13_enumerator.txt  pin3.30-enumerated.txt  run.py  trace_generator.cpp  trace_generator.h  xed_extractor.cpp
(+8285 files in other folders)
